--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "petawawa-preprocessing"
 version = "0.1.0"
-description = "Add your description here"
+description = "Code used for preprocessing petawawa forest inventory and remote sensing data."
 readme = "README.md"
 requires-python = ">=3.13.2"
 dependencies = [
@@ -14,4 +14,6 @@ dependencies = [
   "folium==0.19.5",
   "mapclassify==2.8.1",
   "openpyxl==3.1.5",
+  "geodatasets==2024.8.0",
+  "contextily==1.6.2"
   ]
