--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "petawawa-preprocessing"
 version = "0.1.0"
 description = "Code used for preprocessing petawawa forest inventory and remote sensing data."
 readme = "README.md"
-requires-python = ">=3.13.2"
+requires-python = ">=3.12"
 dependencies = [
   "pandas==2.2.3",
   "geopandas==1.0.1",
@@ -15,5 +15,6 @@ dependencies = [
   "mapclassify==2.8.1",
   "openpyxl==3.1.5",
   "geodatasets==2024.8.0",
-  "contextily==1.6.2"
+  "contextily==1.6.2",
+  "rioxarray",
   ]
