--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,15 @@ description = "Code used for preprocessing petawawa forest inventory and remote 
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-  "pandas==2.2.3",
+  "pandas==2.2.2",
   "geopandas==1.0.1",
   "notebook==7.4.1",
   "matplotlib==3.10.1",
-  "geopandas==1.0.1",
   "ipywidgets==8.1.6",
   "folium==0.19.5",
   "mapclassify==2.8.1",
   "openpyxl==3.1.5",
   "geodatasets==2024.8.0",
   "contextily==1.6.2",
-  "rioxarray",
+  "rioxarray==0.19.0",
   ]
