--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,5 @@ dependencies = [
   "geodatasets==2024.8.0",
   "contextily==1.6.2",
   "rioxarray==0.19.0",
-  "laspy[lazrs]",
+  "laspy[lazrs]==2.5.4",
   ]
