--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,5 +17,6 @@ dependencies = [
   "contextily==1.6.2",
   "rioxarray==0.19.0",
   "laspy[lazrs]==2.5.4",
-  "spyndex"
+  "spyndex==0.5.0",
+  "pyarrow==20.0.0"
   ]
