updated draft of unsupervised

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Code used for preprocessing petawawa forest inventory and remote 
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+  "scikit-learn==1.7.0",
   "pandas==2.2.2",
   "geopandas==1.0.1",
   "notebook==7.4.1",
@@ -18,5 +19,6 @@ dependencies = [
   "rioxarray==0.19.0",
   "laspy[lazrs]==2.5.4",
   "spyndex==0.5.0",
-  "pyarrow==19.0.0"
+  "pyarrow==19.0.0",
+  "plotly",
   ]
