--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = "Code used for preprocessing petawawa forest inventory and remote 
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+  "torch==2.5.1",
+  "torchvision==0.20.1",
+  "lightning==2.5.0",
   "scikit-learn==1.7.0",
   "pandas==2.2.2",
   "geopandas==1.0.1",
@@ -22,3 +25,16 @@ dependencies = [
   "pyarrow==19.0.0",
   "plotly",
   ]
+
+[tool.uv.sources]
+torch = [
+  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
+]
+torchvision = [
+  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
+]
+
+[[tool.uv.index]]
+name = "pytorch-cu124"
+url = "https://download.pytorch.org/whl/cu124"
+explicit = true
